llm call example

--- a/.env.sample
+++ b/.env.sample
@@ -10,3 +10,8 @@ OPENAI_API_LLM_MODEL_35="gpt-35-turbo-1106"
 OPENAI_API_LLM_MODEL_4="gpt-4-1106"
 OPENAI_API_EMB_MODEL="ada-002"
 WORKERS=4
+
+#WATSONX.AI
+WATSONX_APIKEY="9RbuKS4fISNUb4ARm_XZKGQEi2FfOTWGIGoKgYiEE-CU"
+PROJECT_ID='708c81bf-41fa-4e90-b3f1-da477d3551b3' 
+URL='https://us-south.ml.cloud.ibm.com'
