--- a/agent/src/prompts/generate_body_email/generate_body_email.yml
+++ b/agent/src/prompts/generate_body_email/generate_body_email.yml
@@ -39,10 +39,10 @@ PROMPT: |
 
   An analysis of the sensor data from the water tank Bidebieta in Vitoria has identified that some parameters have exceeded their acceptable thresholds. The affected components are:
 
-  1. CONDUCTIVIDAD (20ºC): The current value is 116.30, which is below the lower threshold of 120.48.
+  1. CONDUCTIVITY (20ºC): The current value is 116.30, which is below the lower threshold of 120.48.
   2. PH (20ºC): The current value is 7.90, which is above the upper threshold of 7.64.
-  3. TEMPERATURA: The current value is 16.10, which is above the upper threshold of 14.40.
-  4. TURBIDEZ: The current value is 0.319, which is above the upper threshold of 0.150.
+  3. TEMPERATURE: The current value is 16.10, which is above the upper threshold of 14.40.
+  4. TURBIDITY: The current value is 0.319, which is above the upper threshold of 0.150.
 
   These anomalies may be due to a potential sensor malfunction. We recommend performing a technical inspection to verify the condition of the equipment and ensure accurate data monitoring.
 
