adapted pipeline to api

--- a/agent/.env.sample
+++ b/agent/.env.sample
@@ -1,12 +1,15 @@
 PHOENIX_URI="http://phoenix:6006/"
 BACKEND_SERVER="http://agent:8000/"
 FRONTEND_SERVER="http://front:8002/"
-PHOENIX_SQL_DATABASE_URL="postgresql://postgres:postgres@db:5432/phoenix"
-OPENAI_API_TYPE="azure"
-AZURE_OPENAI_API_KEY="XXXXXXXXXXXXXXXXXXXXX"
-AZURE_OPENAI_ENDPOINT="https://XXXX.openai.azure.com/"
-OPENAI_API_VERSION="2023-03-15-preview"
-OPENAI_API_LLM_MODEL_35="gpt-35-turbo-1106"
-OPENAI_API_LLM_MODEL_4="gpt-4-1106"
-OPENAI_API_EMB_MODEL="ada-002"
+
 WORKERS=4
+
+#WATSONX.AI
+WATSONX_APIKEY="XXXXX"
+PROJECT_ID="XXXXX" 
+URL="XXXXX"
+
+# GOOGLE SEARCH
+GOOGLE_API_KEY="XXXXX"
+GOOGLE_CSE_ID="XXXXX"
+SERPAPI_API_KEY="XXXXX"
